appId: jp.co.yumemi.android.codecheck
name: Github Search View Test
---

- launchApp
- assertVisible:
    "Android Engineer CodeCheck"
- tapOn: "Github Search..."
- inputText: "kotlin"
- tapOn:
    point: "92%,91%"
- assertVisible: "kotlin"
- tapOn:
      id: "item"
      index: 0
- assertVisible: "JetBrains/kotlin"
- assertVisible: "programming language: kotlin"
